--- a/public/skins.css
+++ b/public/skins.css
@@ -3,13 +3,7 @@
   box-sizing: border-box;
   font-family: "Fira Sans";
 }
-.container1 {
-  max-width: 73.5rem;
-  /* padding-left: 1.5rem;
-  padding-right: 1.5rem; */
-  margin: 0 auto;
-}
-
+/* ---------------------------------------------------- colors --------------------------------------------- */
 .clr-primary {
   color: #00c1cf;
 }
@@ -22,29 +16,111 @@
 .clr-black-overlay {
   color: rgba(0, 0, 0, 0.65);
 }
+
+/* ------------------------------------------------------ background ------------------------------------------ */
 .bg-primary {
   background-color: #00c1cf;
 }
 .bg-primary-overlay {
   background-color: rgba(0, 193, 207, 0.75);
 }
+
+
+/* ------------------------------------------------------- border --------------------------------------------------- */
+.border-rad1-5r{
+  border-radius: 1.5rem;
+}
+.border-rad-2r{
+    border-radius: 2rem;
+}
+.border-rad10{
+  border-radius: 10px;
+}
+.border-rad20 {
+  border-radius: 20px;
+}
+.border-rad30 {
+  border-radius: 30px;
+}
+.border-rad-050{
+    border-radius: 50%;
+}
 .border-primary {
   border-color: #00c1cf;
 }
-.nav-bar {
-  width: 40rem;
-}
-.nav-bar-link:hover a {
-  color: black;
-}
+
+/* ---------------------------------------------------------- z - index --------------------------------------------------- */
 .z-500 {
   z-index: 500;
 }
-.header-contact {
-  width: 35rem;
+
+/* ------------------------------------------------- heights --------------------------------------------- */
+.min-h-40r {
+  min-height: 40rem;
 }
-.header-login {
-  width: 18rem;
+.min-h-46r{
+    min-height: 46em;
+}
+
+/* ------------------------------------------------ widths ---------------------------------------- */
+.max-w-25r {
+  max-width: 25rem;
+}
+.max-w-74r{
+    max-width: 74rem;
+}
+.max-w-63r{
+  max-width: 63rem;
+}
+.max-w-100v{
+  max-width: 100vw;
+}
+.w-30c{
+    width: 30ch;
+}
+.w-40c{
+  width: 40ch;
+}
+.w-080{
+  width: 80%;
+}
+.w-090{
+    width: 90%;
+}
+.w-35r{
+    width: 35rem;
+}
+.w-40r{
+    width: 40rem;
+}
+
+
+
+/* ------------------------------------------custom css ------------------------------------------ */
+
+.container1 {
+  max-width: 73.5rem;
+  margin: 0 auto;
+}
+/* -------------------------------- Header start ---------------------------- */
+header {
+  background-color: black;
+  padding: 0.5em 0;
+}
+/* --------------------------------- Header end ------------------------------ */
+/* --------------------------------- Hero Section Start ------------------------ */
+.nav-bar {
+  width: 40rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  color: white;
+  list-style-type: none;
+  font-weight: bolder;
+}
+.nav-bar-link:hover a {
+  color: black;
 }
 .dropdown-service-list-item:hover .dropdown-services-content {
   display: block;
@@ -65,35 +141,475 @@
 .sectors-link:hover .navigation-link-content {
   border-bottom: 1px solid black;
 }
+.hamburger{
+  display: none;
+}
 .bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  background-color: white;
 }
-
 .section-hero {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   min-height: 45.7em;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-position: left center;
+  text-align: center;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../src/images/blog_15-770x545.jpg");
 }
+.sec-hero-h1{
+  font-size: 5rem;
+}
+.paragraph-hero {
+  color: white;
+  font-size: 2rem;
+  font-weight: lighter;
+}
+.sec-hero-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0px;
+  width: 100%;
+  margin-bottom: 10rem;
+}
 .sec-btn {
+  color: white;
+  background-color: #00c1cf;
   border-radius: 30px;
+  border: 1px solid #00c1cf;
+  font-size: 1.5rem;
+  padding: 10px 40px;
+}
+.sec-btn:hover {
+  background-color: black;
+  border-color: white;
+}
+/* ---------------------------------------------------Hero section end ---------------------------------- */
+/* -------------------------------------------------- About us section start ------------------------------- */
+.container-2 {
+  padding: 7rem 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+}
+.box1 {
+  display: flex;
+  flex-direction: column;
+  max-width: 30rem;
 }
 .about-img {
   width: 90%;
   border-radius: 2rem;
 }
-.border-rad20 {
+/* ----------------------------------------- About us section end -------------------------------------- */
+/* -----------------------------------------Pricing section start ------------------------------------ */
+
+
+/* ----------------------------------------- Pricing section end --------------------------------------- */
+/* ----------------------------------------- Services section start ---------------------------------------- */
+.services-more-link:hover{
+  background-color: #00c1cf;
+}
+.service-images{
+  filter: contrast(0.5) brightness(0.9);
+}
+.service-layer-h2{
+  transition: 0.2s;
+}
+.layer {
+  background: transparent;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.layer::after {
+  content: "";
+  height: 38.75em;
+  width: 0%;
+  background: rgba(0, 193, 207, 0.2);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 50%;
+  bottom: 0;
+  transition: 0.1 all ease;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  transition: 0.5s;
+}
+.layer:hover::after {
+  width: 100%;
+}
+.layer:hover #head {
+  transform: translate(-50% -50%);
+  max-width: 100%;
+
+  font-size: 1.4em;
+}
+.layer:hover #btn {
+  display: block;
+  width: 33%;
+}
+/* ----------------------------------------- Services section end ----------------------------------- */
+/* ----------------------------------------- Our guards section start ------------------------------- */
+.team-section{
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.guards-list{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  align-items: center;
+}
+.guards{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+.guard-image{
+  border-radius: 50%;
+  width: 80%;
+}
+.guard-social{
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+}
+/* ---------------------------------------------Our guards section end ------------------------------------ */
+/* --------------------------------------------Blog section start -------------------------------------- */
+.cont-img {
+  width: 20rem;
   border-radius: 20px;
+  border-bottom: 4px solid #00c1cf;
+  margin-bottom: 2rem;
 }
-.border-rad30 {
-  border-radius: 30px;
+.post-btn:hover{
+  padding: 10px 15px;
+  transform: translate(500);
 }
-.pricing-cards {
-  width: 30ch;
+.btn-post {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 15px;
+  width: 100%;
+  margin-top: 1rem;
 }
-.min-h-40r {
-  min-height: 40rem;
+/* --------------------------------------------Blog section end -------------------------------- */
+/* -------------------------------------------- Accrediation Start -------------------------------- */
+.accre-h3{
+  text-align: center;
+  font-size: 20px;
 }
-.max-w-25r {
-  max-width: 25rem;
+/* --------------------------------------------- Accrediation End ---------------------------------------- */
+/* ------------------------------------------ Footer Start ------------------------------------------- */
+/* --------------------------------------Subscribe start -------------------------------------------- */
+.subscribe-section{
+  display: flex;
+  justify-content: space-around;
+  box-sizing: border-box;
+  border-radius: 5rem;
+  background-color: #00c1cf;
+  z-index: 99;
+  max-width: 90%;
+  margin-bottom: -4rem;
+  position: relative;
+}
+.subscribe-wrapper{
+  display: flex;
+  width: 100%;
+  padding: 1.8rem 3.5rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.right-container{
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  align-items: center;
+}
+.offer{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 30rem;
+}
+.offer-h3{
+  font-size: 1.5rem;
+  color: black;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+.offer-h1{
+  font-size: 2rem;
+  margin: 0;
+  color: white;
+}
+.input-email{
+  border-radius: 40px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50%;
+}
+.email-field{
+  appearance: none;
+  outline: none;
+  padding: 0.3rem 1.2rem;
+  border: none;
+  border-radius: 40px;
+  font-size: 1.3rem;
+  width: 50%;
+}
+.subscribe-btn{
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
+  background-color: black;
+  border-radius: 40px;
+  z-index: 3;
+  padding: 1.2rem 0;
+  text-align: center;
+  width: 50%;
+}
+/* ------------------------------------------Subscribe end ---------------------------------------- */
+/* ------------------------------------------ Contact Footer start ---------------------------------- */
+.contact-para-footer{
+  width: 70%;
+  text-align: center;
+  color: white;
+}
+.contact-bottom-link{
+  display: flex;
+  width: 20%;
+  justify-content: space-evenly;
+}
+/* ------------------------------------------- contact footer end ----------------------- */
+/* -------------------------------------------------Bottom footer start ---------------------- */
+.footer-wrapper{
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+/* ------------------------------------------ bottom footer end ---------------------------------- */
+/* ------------------------------------ Footer end --------------------------------------- */
+
+
+
+
+/* --------------------------------------- media queries -------------------------------------- */
+@media (max-width: 1200px){
+  .container1 {
+    max-width: 63rem;
+    padding: 1rem 2rem;
+  }
+  .team-section {
+    padding: 2rem;
+  }
+  .guards-list{
+    flex-wrap: wrap;
+  }
+  .guards{
+    width: 50%;
+  }
+  .guard-social{
+    width: 40%;
+  }
+  .subscribe-section{
+    max-width: 100%;
+    margin-bottom: -5.7rem;
+  }
+  .subscribe-wrapper{
+    padding: 1rem 2rem;
+    justify-content: center;
+  }
+  .right-container{
+    flex-direction: column;
+  }
+  .offer{
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  .input-email{
+    width: 100%;
+  }
+  .contact-para-footer{
+    width: 80%;
+    margin: 10px 0px;
+  }
+  .contact-bottom-link{
+    width: 40%;
+  }
+}
+@media (max-width: 850px){
+  header{
+    display: none;
+  }
+  .nav-bar {
+    position: absolute;
+    left: -100%;
+    top: 7rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .container-2 {
+    flex-direction: column;
+  }
+  .box1 {
+    width: 80%;
+    text-align: center;
+  }
+  .about-img {
+    width: 100%;
+  }
+  .service-layer-h2{
+    font-size: 1.2rem;
+  }
+  .guards{
+    width: 100%;
+  }
+  .guard-image{
+    width: 70%;
+  }
+  .guard-social{
+    width: 30%;
+  }
+  .cont-img {
+    width: 90%;
+  }
+  .subscribe-section{
+    margin: 0;
+    margin-bottom: -5rem;
+    max-width: 100%;
+  }
+  .input-email{
+    width: 80%;
+    flex-direction: column;
+    background-color: transparent;
+  }
+  .email-field{
+    margin-bottom: 2rem;
+    padding-top: 0.7rem;
+    width: 80%;
+    padding-bottom: 0.7rem;
+  }
+  .subscribe-btn{
+    width: 70%;
+  }
+  .contact-para-footer{
+    width: 90%;
+  }
+  .contact-bottom-link{
+    width: 55%;
+  }
+  .footer-wrapper{
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 500px) {
+  .section-hero {
+    background-position: top;
+    min-height: 100vh;
+    align-items: center;
+  }
+  .sec-hero-h1{
+    font-size: 3rem;
+  }
+  .paragraph-hero {
+    font-size: 1.2rem;
+  }
+  .sec-hero-btn {
+    margin-bottom: 2rem;
+  }
+  .sec-btn {
+    font-size: 0.9rem;
+  }
+  .container-main{
+    padding: 1px;
+  }
+  .container-main-price {
+    padding: 1px;
+  }
+  .btn-post {
+    width: 70%;
+  }
+  .accre-h3{
+    font-size: 0.8rem;
+  }
+  .subscribe-section{
+    padding: 0;
+  }
+  .subscribe-wrapper{
+    padding: 2rem 0;
+  }
+  .offer-h3{
+    font-size: 1rem;
+  }
+  .offer-h1{
+    font-size: 1.2rem;
+  }
+  .email-field{
+    margin-bottom: 1.25rem;
+    width: 100%;
+    padding: 0.7rem;
+    font-size: 1rem;
+  }
+  .subscribe-btn{
+    width: 100%;
+    font-size: 1.1rem;
+  }
+  .contact-para-footer{
+    width: 100%;
+  }
+  .contact-bottom-link{
+    width: 80%;
+  }
 }
